Removed total emissions as well

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
     "def annualemissionlimitconstraint(EM,y):\n",
     "    return sum(EM.AnnualTechnologyEmissions[y,t] for t in EM.Technology) <= EM.AnnualEmissionLimit[y]\n",
     "\n",
-    "def totalemissionaccounting(EM):\n",
+    "#def totalemissionaccounting(EM):\n",
     "    return (\n",
     "        sum(EM.AnnualTechnologyEmissions[y,t] * EM.YearlyDifferenceMultiplier[y] for y in EM.Year for t in EM.Technology) == EM.ModelPeriodEmissions\n",
     "    )\n",
@@ -457,7 +457,7 @@
     "#EM.BatterySOCFunction = pyo.Constraint(EM.Storage, EM.Hour, EM.Fuel, rule=batterySOCfunction)\n",
     "\n",
     "#for emissions\n",
-    "EM.TotalEmissionsAccounting = pyo.Constraint(rule=totalemissionaccounting) \n",
+    "#EM.TotalEmissionsAccounting = pyo.Constraint(rule=totalemissionaccounting) \n",
     "#EM.TotalEmissionLimit = pyo.Constraint(rule=totalemissionlimit)\n",
     "\n",
     "#for economics\n",
@@ -478,9 +478,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Rule failed when generating expression for Constraint\n",
+      "    TotalEmissionsAccounting with index None: AttributeError: 'AbstractModel'\n",
+      "    object has no attribute 'ModelPeriodEmissions'\n",
+      "ERROR: Constructing component 'TotalEmissionsAccounting' from data=None\n",
+      "    failed:\n",
+      "        AttributeError: 'AbstractModel' object has no attribute\n",
+      "        'ModelPeriodEmissions'\n"
+     ]
+    }
+   ],
    "source": [
     "#creating the instance of the model here\n",
     "instance = EM.create_instance()\n"
