--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
     "EM.ResidualCapacityStorage = pyo.Param(EM.Storage, EM.Fuel, default=0,initialize=readin_residualcapacitystorage)\n",
     "EM.StorageLifetime = pyo.Param(EM.Storage, default = 20, initialize= readin_storagelifetime)\n",
     "EM.StorageInstallationYear = pyo.Param(EM.Storage, default = 2025, initialize= readin_installedstorageyear)\n",
-    "EM.StorageVariableCost = pyo.Param(EM.Storage, default=0, initialize= readin_storagevariablecost)\n",
+    "#EM.StorageVariableCost = pyo.Param(EM.Storage, default=0, initialize= readin_storagevariablecost)\n",
     "\n",
     "#for emissions\n",
     "EM.AnnualEmissionLimit = pyo.Param(EM.Year, default=float('inf'), initialize=readin_annualemissionlimit)\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,10 +237,8 @@
     "#EM.TotalCapitalCost = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "#EM.TotalVariableCost =pyo.Var(EM.Year, EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "#EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
-    "#EM.SalvageValue = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
+    "EM.SalvageValue = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "EM.CapacityUnits = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeIntegers)\n",
-    "#EM.BatteryChargeState = pyo.Var(EM.Hour, domain=pyo.NonNegativeIntegers)\n",
-    "#EM.CurtailmentState = pyo.Var(EM.Hour, domain=pyo.NonNegativeIntegers)\n",
     "EM.InfeasibleGeneration = pyo.Var(EM.Year,EM.Hour,EM.Fuel, domain=pyo.NonNegativeReals)"
    ]
   },
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,10 +259,6 @@
     "#the objective is to minimize the total costs of the system\n",
     "\n",
     "def obj_function(EM): \n",
-    "    return (pyo.summation(EM.TotalCost) + pyo.summation(EM.TotalStorageCost)\n",
-    "            )+pyo.summation(EM.InfeasibleGeneration)*999\n",
-    "\n",
-    "#def obj_function(EM): \n",
     "    return (pyo.summation(EM.TotalCost) + pyo.summation(EM.TotalStorageCost)\n",
     "            -pyo.summation(EM.SalvageValue))+pyo.summation(EM.InfeasibleGeneration)*999\n",
     "\n",
@@ -282,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +381,7 @@
     "    \n",
     "def storagecostfunction(EM,s): \n",
     "        return (\n",
-    "            EM.TotalStorageCost[s] == sum(EM.NewStorageEnergyCapacity[y,s,f]*EM.InvestmentCostStorage[s] / (1+EM.DiscountRate)**(y-min(EM.Year)) for f in EM.Fuel for y in EM.Year) \n",
+    "            EM.TotalStorageCost[s] == sum(EM.NewStorageEnergyCapacity[y,s,f]*EM.InvestmentCostStorage[s] / (1+EM.DiscountRate)**(y-min(EM.Year)) for f in EM.Fuel for y in EM.Year)\n",
     "            + sum(EM.StorageCharge[y,h,s,f]/(1+EM.DiscountRate)**(y-min(EM.Year)) * EM.StorageVariableCost[s] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel for h in EM.Hour for y in EM.Year))\n",
     "\n",
     "def storageannualbalancefunction(EM,y,s,f): \n",
@@ -408,7 +402,7 @@
     "    return sum(EM.TotalStorageCapacity[y,s,f] for f in EM.Fuel) <= EM.MaxStorageCapacity[y,s]\n",
     "\n",
     "#for economics\n",
-    "#def salvagevalue_endoflife(EM,y,t):\n",
+    "def salvagevalue_endoflife(EM,y,t):\n",
     "    if (EM.TechnologyLifetime[t]+y) < max(EM.Year):\n",
     "        return (\n",
     "            EM.SalvageValue[y,t] == 0        \n",
@@ -416,7 +410,7 @@
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
     "\n",
-    "#def salvagevalue_duringlife(EM,y,t):\n",
+    "def salvagevalue_duringlife(EM,y,t):\n",
     "    if (EM.TechnologyLifetime[t]+y) >= max(EM.Year):\n",
     "        return (\n",
     "            EM.SalvageValue[y,t] == \n",
@@ -461,12 +455,8 @@
     "#EM.TotalEmissionLimit = pyo.Constraint(rule=totalemissionlimit)\n",
     "\n",
     "#for economics\n",
-    "#EM.SalvageValueAccountingEndOfLife = pyo.Constraint(EM.Year,EM.Technology,rule=salvagevalue_endoflife)\n",
-    "#EM.SalvageValueAccountingDuringLife = pyo.Constraint(EM.Year,EM.Technology,rule=salvagevalue_duringlife)\n",
-    "\n",
-    "#EM.CurtailmentDischargeLimit = pyo.Constraint(EM.Hour, rule=curtailmentdischargelimit)\n",
-    "#EM.CurtailmentState = pyo.Constraint(EM.Hour, rule=curtailmentstate)\n",
-    "#EM.BatteryChargeState = pyo.Constraint(EM.Hour, rule=batterychargestate)\n"
+    "EM.SalvageValueAccountingEndOfLife = pyo.Constraint(EM.Year,EM.Technology,rule=salvagevalue_endoflife)\n",
+    "EM.SalvageValueAccountingDuringLife = pyo.Constraint(EM.Year,EM.Technology,rule=salvagevalue_duringlife)\n"
    ]
   },
   {
@@ -478,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,16 +485,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'x5203695', 'Lower bound': 15700201.470782544, 'Upper bound': 15700201.470782563, 'Number of objectives': 1, 'Number of constraints': 5545329, 'Number of variables': 5203695, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5203662, 'Number of nonzeros': 16036128, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '9738.554000139236', 'Error rc': 0, 'Time': 9779.089056015015}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'x5203695', 'Lower bound': 15700201.470782544, 'Upper bound': 15700201.470782563, 'Number of objectives': 1, 'Number of constraints': 5545329, 'Number of variables': 5203695, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5203662, 'Number of nonzeros': 16036128, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '9489.180000066757', 'Error rc': 0, 'Time': 9529.120510339737}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +551,7 @@
        "0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +652,7 @@
        "\"\\n#useful scrap\\nProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCapacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nDemand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\nUse = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCurtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\nStorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\nTotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\nStorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\nStorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
