--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
     "#EM.ModelPeriodEmissionLimit = pyo.Param(initialize=float('inf'))\n",
     "\n",
     "#for grid capacity\n",
-    "EM.GridCapacity = pyo.Param(initialize = 1050)\n",
+    "EM.GridCapacity = pyo.Param(initialize = 500)\n",
     "\n",
     "#for economics\n",
     "EM.DiscountRate = pyo.Param(initialize = 0.05)\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,8 +381,8 @@
     "    \n",
     "def storagecostfunction(EM,s): \n",
     "        return (\n",
-    "            EM.TotalStorageCost[s] == sum(EM.NewStorageEnergyCapacity[y,s,f]*EM.InvestmentCostStorage[s] / (1+EM.DiscountRate)**(y-min(EM.Year)) for f in EM.Fuel for y in EM.Year)\n",
-    "            + sum(EM.StorageCharge[y,h,s,f]/(1+EM.DiscountRate)**(y-min(EM.Year)) * EM.StorageVariableCost[s] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel for h in EM.Hour for y in EM.Year))\n",
+    "            EM.TotalStorageCost[s] == sum(EM.NewStorageEnergyCapacity[y,s,f]*EM.InvestmentCostStorage[s] / (1+EM.DiscountRate)**(y-min(EM.Year)) for f in EM.Fuel for y in EM.Year))\n",
+    "            #+ sum(EM.StorageCharge[y,h,s,f]/(1+EM.DiscountRate)**(y-min(EM.Year)) * EM.StorageVariableCost[s] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel for h in EM.Hour for y in EM.Year))\n",
     "\n",
     "def storageannualbalancefunction(EM,y,s,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,16 +485,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'x5203695', 'Lower bound': 15700201.470782544, 'Upper bound': 15700201.470782563, 'Number of objectives': 1, 'Number of constraints': 5545329, 'Number of variables': 5203695, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5203662, 'Number of nonzeros': 16036128, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '9489.180000066757', 'Error rc': 0, 'Time': 9529.120510339737}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'x5203728', 'Lower bound': 618122.0449563905, 'Upper bound': 618122.0449563905, 'Number of objectives': 1, 'Number of constraints': 5545362, 'Number of variables': 5203728, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5203695, 'Number of nonzeros': 17139936, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '1690.917000055313', 'Error rc': 0, 'Time': 1733.9233474731445}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,24 +534,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6500000.0000000335\n",
-      "47936614.66220594\n"
+      "12692.273887964264\n",
+      "106052.885083573\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.5392457823999948"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,14 +626,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n"
+      "0.5392457823999948\n"
      ]
     }
    ],
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
        "\"\\n#useful scrap\\nProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCapacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nDemand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\nUse = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCurtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\nStorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\nTotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\nStorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\nStorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
