--ver7: works well between 30 min - 1:30 min

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "##### Created on: 25.12.2023\n",
     "##### Last updated on: 06.02.2024\n",
-    "##### Version: 04\n",
+    "##### Version: 07\n",
     "\n",
     "##### Developed by: Taha Ahmed Siddiqui (tahaahmedsiddiqui@outlook.com) and Hareem Taha (hareem.nadeem10@gmail.com)\n",
     "##### GitHub Repository: https://github.com/TahaAhmedSiddiqui/Energy-Modelling---Isle-of-Eigg"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,13 +102,12 @@
     "#Creating the yearly difference multiplier to get the number of years between each timestep\n",
     "YearlyDifferenceMultiplier = [EM.Year.at(i+1) - EM.Year.at(i) for i in range(1,len(EM.Year))]\n",
     "YearlyDifferenceMultiplier.append(1)\n",
-    "YearlyDifferenceMultiplier = pd.Series(YearlyDifferenceMultiplier, index=EM.Year, name='value')\n",
-    "#print(YearlyDifferenceMultiplier)"
+    "YearlyDifferenceMultiplier = pd.Series(YearlyDifferenceMultiplier, index=EM.Year, name='value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +176,6 @@
     "\n",
     "#for emissions\n",
     "EM.AnnualEmissionLimit = pyo.Param(EM.Year, default=float('inf'), initialize=readin_annualemissionlimit)\n",
-    "#EM.ModelPeriodEmissionLimit = pyo.Param(initialize=float('inf'))\n",
     "\n",
     "#for grid capacity\n",
     "EM.GridCapacity = pyo.Param(initialize = 500)\n",
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,9 +231,6 @@
     "EM.StorageDisCharge = pyo.Var(EM.Year, EM.Hour,EM.Storage,EM.Fuel, domain=pyo.NonNegativeReals) \n",
     "EM.StorageLevel = pyo.Var(EM.Year, EM.Hour,EM.Storage,EM.Fuel, domain=pyo.NonNegativeReals) \n",
     "EM.TotalStorageCost = pyo.Var(EM.Storage, domain=pyo.NonNegativeReals)\n",
-    "#EM.TotalCapitalCost = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
-    "#EM.TotalVariableCost =pyo.Var(EM.Year, EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)\n",
-    "#EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
     "EM.SalvageValue = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "EM.CapacityUnits = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeIntegers)\n",
     "EM.InfeasibleGeneration = pyo.Var(EM.Year,EM.Hour,EM.Fuel, domain=pyo.NonNegativeReals)"
@@ -250,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,16 +326,6 @@
     "\n",
     "def annualemissionlimitconstraint(EM,y):\n",
     "    return sum(EM.AnnualTechnologyEmissions[y,t] for t in EM.Technology) <= EM.AnnualEmissionLimit[y]\n",
-    "\n",
-    "#def totalemissionaccounting(EM):\n",
-    "    return (\n",
-    "        sum(EM.AnnualTechnologyEmissions[y,t] * EM.YearlyDifferenceMultiplier[y] for y in EM.Year for t in EM.Technology) == EM.ModelPeriodEmissions\n",
-    "    )\n",
-    "\n",
-    "#def totalemissionlimit(EM):\n",
-    "    return (\n",
-    "        EM.ModelPeriodEmissionLimit >= EM.ModelPeriodEmissions\n",
-    "    )\n",
     "\n",
     "\n",
     "#for storage\n",
@@ -466,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,20 +468,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Problem': [{'Name': 'x5203728', 'Lower bound': 618496.6496040329, 'Upper bound': 618496.7398746291, 'Number of objectives': 1, 'Number of constraints': 5545362, 'Number of variables': 5203728, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5203695, 'Number of nonzeros': 17139936, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '2424.654000043869', 'Error rc': 0, 'Time': 2464.623167991638}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#defining the solver here\n",
     "opt = pyo.SolverFactory('gurobi')\n",
@@ -514,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,28 +506,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12692.273887964267\n",
-      "61431.383534712586\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#extracting the data from the solution to export results\n",
     "\n",
@@ -624,37 +579,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(max(instance.InfeasibleGeneration.extract_values().values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n#useful scrap\\nProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCapacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nDemand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\nUse = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCurtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\nStorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\nTotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\nStorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\nStorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "#scrap yard\n",
@@ -695,6 +631,16 @@
     "        return EM.StorageLevel[h,s,f] >= 0.6 * EM.StorageEnergyCapacity[s,f]\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
+    "\n",
+    "def totalemissionaccounting(EM):\n",
+    "    return (\n",
+    "        sum(EM.AnnualTechnologyEmissions[y,t] * EM.YearlyDifferenceMultiplier[y] for y in EM.Year for t in EM.Technology) == EM.ModelPeriodEmissions\n",
+    "    )\n",
+    "\n",
+    "def totalemissionlimit(EM):\n",
+    "    return (\n",
+    "        EM.ModelPeriodEmissionLimit >= EM.ModelPeriodEmissions\n",
+    "    )        \n",
     "'''\n",
     "\n",
     "'''\n",
