Updated the investment and variable costs
- Renewables get a variable cost as a factor of fixed o&m costs
- batteries have a variable cost of 0

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -805,11 +805,7 @@
     "non_zero_values\n",
     "sum(instance.InfeasibleGeneration.extract_values().values())\n",
     "#print(TotalCapitalCost)\n",
-    "#print(TotalVariableCost)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "#print(TotalVariableCost)\n"
    ]
   },
   {
@@ -1043,27 +1039,6 @@
    ],
    "source": [
     "print(max(instance.InfeasibleGeneration.extract_values().values()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2771227462.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[33], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    LastYearInvestmentCost =\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "LastYearCapacity = NewCapacity[NewCapacity['Year']== 2040].iloc[:5,:]\n",
-    "LastYearCapacity = LastYearCapacity[(LastYearCapacity['Value'] != 0)]\n",
-    "InvestmentCost = pd.DataFrame(readin_investmentcost).iloc[:5,:]\n",
-    "LastYearInvestmentCost = "
    ]
   },
   {
