Added the constraint for total variable cost

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -234,7 +234,7 @@
     "EM.CapacityUnits = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeIntegers)\n",
     "EM.InfeasibleGeneration = pyo.Var(EM.Year,EM.Hour,EM.Fuel, domain=pyo.NonNegativeReals)\n",
     "EM.TotalCapitalCost = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
-    "#EM.TotalVariableCost = pyo.Var(EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)"
+    "EM.TotalVariableCost = pyo.Var(EM.Year, EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)"
    ]
   },
   {
@@ -291,17 +291,16 @@
     "\n",
     "def productioncost(EM,t): \n",
     "    return (\n",
-    "        sum(EM.FuelProductionByTechnology[y,h,t,f] / (1+EM.DiscountRate)**(y-min(EM.Year))\n",
-    "            * EM.VariableCost[t] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel for h in EM.Hour for y in EM.Year) \n",
+    "        sum(EM.TotalVariableCost[y,h,t] for y in EM.Year for h in EM.Hour) \n",
     "            + sum(EM.TotalCapitalCost[y,t] for y in EM.Year) == EM.TotalCost[t]\n",
     "    )\n",
     "\n",
     "def totalcapitalcostfunction(EM,y,t):\n",
     "    return EM.NewCapacity[y,t] * EM.CapitalCost[t] / (1+EM.DiscountRate)**(y-min(EM.Year)) == EM.TotalCapitalCost[y,t]\n",
     "\n",
-    "#def totalvariablecostfunction(EM,h,t):\n",
+    "def totalvariablecostfunction(EM,y,h,t):\n",
     "    return sum(EM.FuelProductionByTechnology[y,h,t,f] / (1+EM.DiscountRate)**(y-min(EM.Year))\n",
-    "            * EM.VariableCost[t] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel for y in EM.Year) == EM.TotalVariableCost[h,t]\n",
+    "            * EM.VariableCost[t] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel) == EM.TotalVariableCost[y,h,t]\n",
     "\n",
     "def productionfunction_dispatchable(EM,y,h,t,f):\n",
     "    if EM.TagDispatchableTechnology[t] > 0:\n",
@@ -426,7 +425,7 @@
     "EM.TotalCapacityAccounting = pyo.Constraint(EM.Year, EM.Technology, rule=totalcapacityaccounting)\n",
     "EM.CapacityUnitFunction = pyo.Constraint(EM.Year, EM.Technology, rule=capacityunitfunction)\n",
     "EM.TotalCapitalCostFunction = pyo.Constraint(EM.Year, EM.Technology, rule=totalcapitalcostfunction)\n",
-    "#EM.TotalVariableCostFunction = pyo.Constraint(EM.Hour, EM.Technology, rule=totalvariablecostfunction)\n",
+    "EM.TotalVariableCostFunction = pyo.Constraint(EM.Year, EM.Hour, EM.Technology, rule=totalvariablecostfunction)\n",
     "\n",
     "#for storage\n",
     "EM.StorageChargeFunction = pyo.Constraint(EM.Year,EM.Storage,EM.Hour,EM.Fuel, rule=storagechargefunction)\n",
