Fixed the variable cost constraint

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -291,7 +291,7 @@
     "\n",
     "def productioncost(EM,t): \n",
     "    return (\n",
-    "        sum(EM.TotalVariableCost[y,h,t] for y in EM.Year for h in EM.Hour) \n",
+    "        sum(EM.TotalVariableCost[y,h,t] * EM.YearlyDifferenceMultiplier[y] for y in EM.Year for h in EM.Hour) \n",
     "            + sum(EM.TotalCapitalCost[y,t] for y in EM.Year) == EM.TotalCost[t]\n",
     "    )\n",
     "\n",
@@ -300,7 +300,7 @@
     "\n",
     "def totalvariablecostfunction(EM,y,h,t):\n",
     "    return sum(EM.FuelProductionByTechnology[y,h,t,f] / (1+EM.DiscountRate)**(y-min(EM.Year))\n",
-    "            * EM.VariableCost[t] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel) == EM.TotalVariableCost[y,h,t]\n",
+    "            * EM.VariableCost[t] for f in EM.Fuel) == EM.TotalVariableCost[y,h,t]\n",
     "\n",
     "def productionfunction_dispatchable(EM,y,h,t,f):\n",
     "    if EM.TagDispatchableTechnology[t] > 0:\n",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -533,21 +533,7 @@
      "text": [
       "2774.3510914822773\n",
       "136893.05811530433\n",
-      "              Value\n",
-      "Year Hour          \n",
-      "2030 1     0.029879\n",
-      "     2     0.031797\n",
-      "     3     0.030684\n",
-      "     4     0.031267\n",
-      "     5     0.037425\n",
-      "...             ...\n",
-      "2040 8756  0.004572\n",
-      "     8757  0.005226\n",
-      "     8758  0.003795\n",
-      "     8759  0.002761\n",
-      "     8760  0.003570\n",
-      "\n",
-      "[26280 rows x 1 columns]\n"
+      "0.0\n"
      ]
     }
    ],
@@ -627,7 +613,7 @@
     "Curtailment.to_csv('../3. Output/Curtailment.csv',index=False)\n",
     "StorageCapacity.to_csv('../3. Output/StorageCapacity.csv', index=False)\n",
     "TotalAnnualCapitalCosts.to_csv('../3. Output/TotalAnnualCapacityCosts.csv', index=False)\n",
-    "TotalVariableCost.to_csv('../3. Output/AnnualVariableCost.csv', index=False)\n",
+    "TotalVariableCost.to_csv('../3. Output/AnnualVariableCost.csv', index=True)\n",
     "\n",
     "print(sum(instance.AnnualTechnologyEmissions.extract_values().values()))\n",
     "print(sum(instance.Curtailment.extract_values().values()))\n",
@@ -637,21 +623,6 @@
     "sum(instance.InfeasibleGeneration.extract_values().values())\n",
     "print(max(instance.InfeasibleGeneration.extract_values().values()))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
