First Future Scenario figures

--- a/3. Future Scenario - Electrified/2. Code/Model.ipynb
+++ b/3. Future Scenario - Electrified/2. Code/Model.ipynb
@@ -481,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'x5019768', 'Lower bound': 140886.66293696093, 'Upper bound': 140886.6725609267, 'Number of objectives': 1, 'Number of constraints': 5203719, 'Number of variables': 5019768, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5019735, 'Number of nonzeros': 15825921, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '320.646999835968', 'Error rc': 0, 'Time': 357.3595530986786}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'x5019768', 'Lower bound': 134444.96147020702, 'Upper bound': 134444.9614702095, 'Number of objectives': 1, 'Number of constraints': 5203719, 'Number of variables': 5019768, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5019735, 'Number of nonzeros': 15825921, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '2335.46799993515', 'Error rc': 0, 'Time': 2371.5521545410156}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
      "execution_count": 11,
@@ -531,8 +531,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4036409.358580689\n",
-      "341945.8172345027\n",
+      "4205562.945035325\n",
+      "194239.4187442523\n",
       "0.0\n"
      ]
     }
@@ -622,6 +622,47 @@
     "non_zero_values\n",
     "sum(instance.InfeasibleGeneration.extract_values().values())\n",
     "print(max(instance.InfeasibleGeneration.extract_values().values()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Year  Hour        Technology      Fuel       Value\n",
+      "0        2030     1           SolarPV     Power   -0.000000\n",
+      "1        2030     1           SolarPV      Heat    0.000000\n",
+      "2        2030     1           SolarPV  Mobility    0.000000\n",
+      "3        2030     1           SolarPV   Cooking    0.000000\n",
+      "4        2030     1           SolarPV    Diesel    0.000000\n",
+      "...       ...   ...               ...       ...         ...\n",
+      "1734475  2040  8760  ElectricHeatPump      Heat  102.602359\n",
+      "1734476  2040  8760  ElectricHeatPump  Mobility    0.000000\n",
+      "1734477  2040  8760  ElectricHeatPump   Cooking    0.000000\n",
+      "1734478  2040  8760  ElectricHeatPump    Diesel    0.000000\n",
+      "1734479  2040  8760  ElectricHeatPump  FireWood    0.000000\n",
+      "\n",
+      "[1734480 rows x 5 columns]\n",
+      "Year  Technology      \n",
+      "2030  ElectricHeatPump    379465.523708\n",
+      "      WoodBurner          700323.254820\n",
+      "2035  ElectricHeatPump    292525.930165\n",
+      "      WoodBurner          827096.877083\n",
+      "2040  ElectricHeatPump    585009.140000\n",
+      "      WoodBurner          574755.696190\n",
+      "Name: Value, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ProductionByTechnology)\n",
+    "Heatloadserved = ProductionByTechnology[ProductionByTechnology['Technology'].isin(['ElectricHeatPump','WoodBurner'])]\n",
+    "TotalHeatLoad = Heatloadserved.groupby(['Year','Technology'])['Value'].sum()\n",
+    "print(TotalHeatLoad)"
    ]
   },
   {
